[package]
edition = "2021"
name = "coinmarket"
version = "0.3.100"
authors = ["Tony Bark"]
description = "Coin Market is a simple library designed to make it easy get market information for cryptocurrencies from exchanges like Shapeshift."
readme = "README.md"
keywords = ["evm", "ethereum", "cryptocurrency"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
license = "BSD-3-Clause OR Unlicense"
repository = "https://github.com/tonytins/coinmarket"

[dependencies]
reqwest = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
dotenv = "0.15"

[badges]
maintenance = { status = "deprecated" }